2011-09-30  Chang Shu  <cshu@webkit.org>

        Replace textInputController.doCommand with eventSender.keyDown in password-echo tests
        https://bugs.webkit.org/show_bug.cgi?id=69143

        textInputController.doCommand is not supported very well across the platforms. Replace it
        with eventSender.keyDown would make the tests pass on more platforms and potentially WK2.

        Reviewed by Antonio Gomes.

        * editing/input/resources/password-echo.js:
        (init):

2011-09-30  Shinichiro Hamaji  <hamaji@chromium.org>

        [Chromium] Layout test failures under Snow Leopard
        https://bugs.webkit.org/show_bug.cgi?id=54322

        Unreviewed test_expectations.txt update. acid3 seems to be IMAGE+TEXT, not IMAGE

        * platform/chromium/test_expectations.txt:

2011-09-30  Shinichiro Hamaji  <hamaji@chromium.org>

        [Chromium] Layout Test fast/frames/frame-set-rotation-hit.html and fast/frames/frame-set-scaling-hit.html are failing
        https://bugs.webkit.org/show_bug.cgi?id=69136

        Unreviewed test_expectations.txt update

        * platform/chromium/test_expectations.txt:

2011-09-29  Shinichiro Hamaji  <hamaji@chromium.org>

        [Chromium] Layout Test platform/chromium/compositing/3d-corners.html is failing
        https://bugs.webkit.org/show_bug.cgi?id=69124

        Unreviewed test_expectations.txt update

        * platform/chromium/test_expectations.txt:

2011-09-29  Shinichiro Hamaji  <hamaji@chromium.org>

        fast/text/line-initial-and-final-swashes.html fails on Chromium
        https://bugs.webkit.org/show_bug.cgi?id=69103

        Unreviewed test_expectations.txt update

        * platform/chromium/test_expectations.txt:

2011-09-29  Fady Samuel  <fsamuel@chromium.org>

        Fixed Hit testing on Framesets when Frameset is transformed
        https://bugs.webkit.org/show_bug.cgi?id=67740

        Reviewed by Simon Fraser.

        * fast/frames/frame-set-rotation-hit-expected.png: Added.