@@ -1,3 +1,13 @@
+2011-09-30  Antaryami Pandia  <antaryami.pandia@motorola.com>
+
+        LayoutTests: Rewrite fast/dom/HTMLInputElement/input-size-attribute.html
+        https://bugs.webkit.org/show_bug.cgi?id=69130
+
+        Reviewed by Alexey Proskuryakov.
+
+        * fast/dom/HTMLInputElement/input-size-attribute-expected.txt:
+        * fast/dom/HTMLInputElement/input-size-attribute.html:
+
 2011-09-30  Chang Shu  <cshu@webkit.org>
 
         Replace textInputController.doCommand with eventSender.keyDown in password-echo tests
